--- a/src/app/features/reports/components/reports-table/reports-table.component.html
+++ b/src/app/features/reports/components/reports-table/reports-table.component.html
@@ -1,44 +1,58 @@
-<table mat-table [dataSource]="reports" class="mat-elevation-z1" style="width: 100%">
+<div class="table-wrapper">
+  <h2 class="reports-title">📄 Reportes</h2>
 
-    <!-- Nombre -->
-    <ng-container matColumnDef="name">
-      <th mat-header-cell *matHeaderCellDef> Nombre </th>
-      <td mat-cell *matCellDef="let report"> {{ getFullName(report) }} </td>
-    </ng-container>
-  
-    <!-- Estado -->
-    <ng-container matColumnDef="status">
-      <th mat-header-cell *matHeaderCellDef> Estado </th>
-      <td mat-cell *matCellDef="let report"> {{ report.status }} </td>
-    </ng-container>
-  
-    <!-- Fecha -->
-    <ng-container matColumnDef="date">
-      <th mat-header-cell *matHeaderCellDef> Fecha </th>
-      <td mat-cell *matCellDef="let report"> {{ getFormattedDate(report.creationDate) }} </td>
-    </ng-container>
-  
-    <!-- Descripción -->
-    <ng-container matColumnDef="description">
-      <th mat-header-cell *matHeaderCellDef> Descripción </th>
-      <td mat-cell *matCellDef="let report"> {{ report.description }} </td>
-    </ng-container>
-  
-    <!-- Acciones -->
-    <ng-container matColumnDef="actions">
-      <th mat-header-cell *matHeaderCellDef> Acciones </th>
-      <td mat-cell *matCellDef="let report">
-        <button mat-icon-button color="primary" (click)="onEdit(report)" [disabled]="!canEdit(report)">
-          <mat-icon>edit</mat-icon>
-        </button>
-        <button mat-icon-button color="warn" (click)="onDelete(report)" [disabled]="!canDelete(report)">
-          <mat-icon>delete</mat-icon>
-        </button>
-      </td>
-    </ng-container>
-  
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-  
-  </table>
-  
+  <!-- Contenedor de altura fija -->
+  <div class="table-container">
+
+    <!-- Tabla scrolleable -->
+    <div class="table-body-scroll">
+      <table mat-table [dataSource]="dataSource" class="mat-elevation-z1" [style.minWidth.px]="800">
+
+        <!-- Nombre -->
+        <ng-container matColumnDef="name">
+          <th mat-header-cell *matHeaderCellDef> Nombre </th>
+          <td mat-cell *matCellDef="let report"> {{ getFullName(report) }} </td>
+        </ng-container>
+
+        <!-- Estado -->
+        <ng-container matColumnDef="status">
+          <th mat-header-cell *matHeaderCellDef> Estado </th>
+          <td mat-cell *matCellDef="let report"> {{ report.status }} </td>
+        </ng-container>
+
+        <!-- Fecha -->
+        <ng-container matColumnDef="date">
+          <th mat-header-cell *matHeaderCellDef> Fecha </th>
+          <td mat-cell *matCellDef="let report"> {{ getFormattedDate(report.creationDate) }} </td>
+        </ng-container>
+
+        <!-- Descripción -->
+        <ng-container matColumnDef="description">
+          <th mat-header-cell *matHeaderCellDef> Descripción </th>
+          <td mat-cell *matCellDef="let report"> {{ report.description }} </td>
+        </ng-container>
+
+        <!-- Acciones -->
+        <ng-container matColumnDef="actions">
+          <th mat-header-cell *matHeaderCellDef> Acciones </th>
+          <td mat-cell *matCellDef="let report">
+            <button mat-icon-button color="primary" (click)="onEdit(report)" [disabled]="!canEdit(report)">
+              <mat-icon>edit</mat-icon>
+            </button>
+            <button mat-icon-button color="warn" (click)="onDelete(report)" [disabled]="!canDelete(report)">
+              <mat-icon>delete</mat-icon>
+            </button>
+          </td>
+        </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+      </table>
+    </div>
+
+    <!-- Paginador fijo al final -->
+    <mat-paginator class="paginator" [pageSizeOptions]="[5, 10, 15]" showFirstLastButtons>
+    </mat-paginator>
+
+  </div>
+</div>
