--- a/src/app/features/reports/pages/reports-page/reports-page.component.scss
+++ b/src/app/features/reports/pages/reports-page/reports-page.component.scss
@@ -1,6 +1,6 @@
 .reports-layout {
     display: flex;
-    height: 100vh; // 💥 altura pantalla completa
+    height: 100vh;
     overflow: hidden;
   }
   
