--- a/src/app/features/reports/pages/reports-page/reports-page.component.scss
+++ b/src/app/features/reports/pages/reports-page/reports-page.component.scss
@@ -27,7 +27,7 @@
     background-color: #fff;
     border-radius: 12px;
     padding: 16px;
-    box-shadow: 0 0 10px rgba(0,0,0,0.05);
+    box-shadow: 0 3px 8px rgba(0, 0, 0, 0.08);
     overflow: hidden;
   }
   
